classDiagram
    class SearchFragment {
        -RicorrenzaViewModel viewModel
        -FragmentSearchBinding binding
        -RicorrenzaAdapter adapter
        +onViewCreated()
        +setupViews()
        +performSearch()
        +updateUIWithResults()
    }
    class RicorrenzaViewModel {
        -RicorrenzaRepository repository
        -ExecutorService executorService
        -MutableLiveData risultatiRicercaAvanzata
        +eseguiRicercaAvanzata()
        +clearRisultatiRicercaAvanzata()
    }
    class RicorrenzaRepository {
        -RicorrenzaDao ricorrenzaDao
        +ricercaAvanzataSync()
    }
    class RicorrenzaDao {
        +ricercaAvanzata()
        +ricercaAvanzataSync()
    }
    class RicorrenzaAdapter {
        +setRicorrenze()
    }
    class RicorrenzaConTipo {
        +Ricorrenza ricorrenzaEntity
        +TipoRicorrenza tipoRicorrenzaEntity
    }

    SearchFragment --> RicorrenzaViewModel : usa
    SearchFragment --> RicorrenzaAdapter : usa
    RicorrenzaViewModel --> RicorrenzaRepository : usa
    RicorrenzaRepository --> RicorrenzaDao : usa
    RicorrenzaAdapter --> RicorrenzaConTipo : displays
    RicorrenzaDao ..> RicorrenzaConTipo : returns
